# imorales-python

./: .gitignore  Makefile  Pipfile  README.md  pyproject.toml
src/: auth.py  cmd.py  command.py  database.py  desktop.py  dom.py  editor.py  env.py  error.py  fuzzy.py  hint.py  host.py  jwt.py  log.py  lsp.py  memory.py  message.py  network.py  oa2.py  observe.py  ops.py  picture.py  procedure.py  remote.py  security.py  service.py  vcs.py
test/unit/: test_log.py
