[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[project]
name = 'imo'
version = "0.1.0"
requires-python = ">= 3.11"
dependencies = ["requests >= 2.31.0", "cryptography >= 41.0.0"]

[project.optional-dependencies]
img = [
    "pillow >= 10.1.0",
    "pillow-heif >= 0.14.0",
    "opencv-python >= 4.8.1.78",
    "numpy >= 1.26.0",
]
